# erofs-utils_cygwin_cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  mk.sh
.github/workflows/: cmake.yml  cmake_ndk.yml
base/: Android.bp  Makefile  abi_compatibility.cpp  cmsg.cpp  cygmake.sh  file.cpp  liblog_symbols.cpp  liblog_symbols.h  logging.cpp  logging_test.cpp  mapped_file.cpp  properties.cpp  properties_test.cpp  strings.cpp  test_utils_test.cpp  threads.cpp  utf8_test.cpp
base/include/android-base/: errno_restorer.h  expected.h  file.h  logging.h  macros.h  mapped_file.h  properties.h  unique_fd.h
cmakes/base/: CMakeLists.txt
cmakes/cutils/: CMakeLists.txt
cmakes/e2fsprog/: CMakeLists.txt
cmakes/erofs-utils/: CMakeLists.txt
cmakes/lz4/: CMakeLists.txt
cmakes/selinux/: CMakeLists.txt
cmakes/xz/: CMakeLists.txt
e2fsprog/: Makefile
e2fsprog/include/mingw/: grp.h  pwd.h  unistd.h
e2fsprog/include/mingw/linux/: types.h
e2fsprog/include/mingw/sys/: stat.h  sysmacros.h  types.h
e2fsprog/include/nonunix/: getopt.h  grp.h  pwd.h  unistd.h
e2fsprog/include/nonunix/asm/: types.h
e2fsprog/include/nonunix/linux/: types.h
e2fsprog/lib/uuid/: Android.bp  configure.in  gen_uuid.c  gen_uuid_nt.c  tst_uuid.c  uuid.3.in  uuid.pc.in  uuidP.h  uuid_clear.3.in  uuid_compare.3.in  uuid_copy.3.in  uuid_generate.3.in  uuid_is_null.3.in  uuid_parse.3.in  uuid_time.3.in  uuid_types.h  uuid_types.h.in  uuid_unparse.3.in
erofs-utils_cygwin/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  VERSION  autogen.sh  configure.ac
erofs-utils_cygwin/LICENSES/: Apache-2.0  GPL-2.0
erofs-utils_cygwin/dump/: Makefile.am  main.c
erofs-utils_cygwin/fsck/: Makefile.am  main.c
erofs-utils_cygwin/fuse/: Makefile.am  macosx.h  main.c
erofs-utils_cygwin/include/: erofs_fs.h
erofs-utils_cygwin/include/erofs/: blobchunk.h  block_list.h  cache.h  compress.h  compress_hints.h  config.h  decompress.h  defs.h  dir.h  err.h  exclude.h  flex-array.h  hashmap.h  hashtable.h  inode.h  internal.h  io.h  list.h  print.h  trace.h  xattr.h
erofs-utils_cygwin/lib/: Makefile.am  blobchunk.c  block_list.c  cache.c  compress.c  compress_hints.c  compressor.c  compressor.h  compressor_liblzma.c  compressor_lz4.c  compressor_lz4hc.c  config.c  data.c  decompress.c  dir.c  exclude.c  hashmap.c  inode.c  io.c  liberofs_private.h  namei.c  sha256.c  super.c  xattr.c  zmap.c
erofs-utils_cygwin/man/: Makefile.am  dump.erofs.1  erofsfuse.1  fsck.erofs.1  mkfs.erofs.1
erofs-utils_cygwin/mkfs/: Makefile.am  main.c
erofs-utils_cygwin/scripts/: get-version-number
include/: config.h
include/erofs/: internal.h
lib/: config.c  inode.c  liberofs_private.h  xattr.c
libcutils/: Android.bp  CMakeLists.txt  Makefile  TEST_MAPPING  cmake_install.cmake  cygmake.sh  fs_config.cpp  mmccmake  threads.cpp
libcutils/include/private/: android_filesystem_config.h
libcutils/include/utils/: String16.h  String8.h
liblog/: Android.bp  Makefile  OWNERS  README.md  README.protocol.md  cygmake.sh  event.logtags  event_tag_map.cpp  liblog.map.txt  log_event_list.cpp  log_event_write.cpp  log_time.cpp  logd_reader.cpp  logd_reader.h  logd_writer.cpp  logd_writer.h  logger.h  logger_name.cpp  logger_read.cpp  logger_write.cpp  logger_write.h  logprint.cpp  pmsg_reader.cpp  pmsg_reader.h  pmsg_writer.cpp  pmsg_writer.h  properties.cpp  uio.h
liblog/include/log/: event_tag_map.h  log.h  log_event_list.h  log_main.h  log_properties.h  log_radio.h  log_safetynet.h  log_system.h  log_time.h  logprint.h
liblog/include/private/: android_logger.h
liblog/include_vndk/android/: log.h
liblog/include_vndk/log/: log.h  log_event_list.h  log_id.h  log_read.h  log_time.h
liblog/tests/: Android.bp  AndroidTest.xml  libc_test.cpp  liblog_benchmark.cpp  liblog_default_tag.cpp  liblog_global_state.cpp  liblog_host_test.cpp  liblog_test.cpp  log_id_test.cpp  log_radio_test.cpp  log_read_test.cpp  log_system_test.cpp  log_time_test.cpp  log_wrap_test.cpp  logd_writer_test.cpp  logprint_test.cpp
libselinux/: Android.mk  Makefile  NOTICE  README.android  cygmake.sh
libselinux/include/selinux/: android.h  avc.h  context.h  label.h  selinux.h
libselinux/src/: android.c  avc.c  avc_internal.c  avc_internal.h  avc_sidtab.c  avc_sidtab.h  booleans.c  callbacks.c  callbacks.h  canonicalize_context.c  checkAccess.c  check_context.c  compute_av.c  compute_create.c  context.c  context_internal.h  deny_unknown.c  disable.c  dso.h  enabled.c  fgetfilecon.c  freecon.c  fsetfilecon.c  get_initial_context.c  getenforce.c  getfilecon.c  getpeercon.c  init.c  label.c  label_android_property.c  label_file.c  label_file.h  label_internal.h  label_support.c  lgetfilecon.c  load_policy.c  lsetfilecon.c  mapping.c  mapping.h  policy.h  (+8 more)
libselinux/utils/: sefcontext_compile.c
mkfs/: main.c
pcre-8.45/: Makefile  compile.sh  config.h  config.status  libpcre.la  libpcrecpp.la  libtool
xz-5.3.2alpha/: ChangeLog  Makefile.in  configure
xz-5.3.2alpha/doc/man/txt/: xz.txt  xzgrep.txt
xz-5.3.2alpha/po/: cs.gmo  cs.po  de.gmo  de.po  fr.gmo  fr.po  it.gmo  it.po  pl.gmo  pl.po  vi.gmo  vi.po  xz.pot
xz-5.3.2alpha/po4a/: de.po
xz-5.3.2alpha/src/common/: mythread.h
xz-5.3.2alpha/src/liblzma/: Makefile.in
xz-5.3.2alpha/tests/: Makefile.in
